@@ -16,6 +16,8 @@ v0.71.6		02-Sep-2005
 	mbcico:
 		Changed compression state logic.
 		Removed soft-cr filter during message import.
+		Record previous session state so we can better react on failed
+		sessions.
 
 	mbfido:
 		If some newsarticles are not accepted for post, don't treat
